# lean

./: .gitignore  .gitmodules  rust-toolchain.toml
lean_client/: Cargo.toml  Cross.toml  Dockerfile  Makefile  build.rs
lean_client/containers/: Cargo.toml
lean_client/containers/src/: attestation.rs  block.rs  checkpoint.rs  config.rs  lib.rs  serde_helpers.rs  slot.rs  state.rs  status.rs  validator.rs
lean_client/containers/tests/test_vectors/: mod.rs  runner.rs
lean_client/containers/tests/unit_tests/: common.rs  state_process.rs  state_transition.rs
lean_client/fork_choice/: Cargo.toml
lean_client/fork_choice/src/: block_cache.rs  handlers.rs  lib.rs  reaggregate.rs  store.rs  sync_state.rs
lean_client/fork_choice/tests/: fork_choice_test_vectors.rs
lean_client/fork_choice/tests/unit_tests/: common.rs  time.rs  validator.rs
lean_client/http_api/: Cargo.toml
lean_client/http_api/src/: aggregator_controller.rs  aggregator_handlers.rs  config.rs  handlers.rs  lib.rs  routing.rs  server.rs  test_driver.rs
lean_client/http_api/tests/: api_endpoint.rs
lean_client/metrics/: Cargo.toml
lean_client/metrics/src/: lib.rs  metrics.rs  server.rs
lean_client/networking/: Cargo.toml
lean_client/networking/src/: compressor.rs  req_resp.rs  types.rs
lean_client/networking/src/discovery/: mod.rs
lean_client/networking/src/gossipsub/: message.rs  topic.rs
lean_client/networking/src/gossipsub/tests/: config.rs  message.rs  message_id.rs  topic.rs
lean_client/networking/src/network/: behaviour.rs  mod.rs  range_sync.rs  service.rs
lean_client/rust/patch/quinn-udp/: Cargo.toml
lean_client/rust/patch/quinn-udp/src/: fallback.rs  lib.rs
lean_client/spec_test_fixtures/: Cargo.toml
lean_client/spec_test_fixtures/src/: common.rs  fork_choice.rs  lib.rs  state_transition.rs  verify_signatures.rs
lean_client/src/: aggregation.rs  banner.rs  main.rs
lean_client/test_vectors/api_endpoint/devnet/api/test_api_endpoints/: test_aggregator_status_disabled.json  test_aggregator_status_enabled.json  test_aggregator_toggle_activate.json  test_aggregator_toggle_deactivate.json  test_aggregator_toggle_idempotent_disable.json  test_aggregator_toggle_idempotent_enable.json  test_aggregator_toggle_rejects_empty_body.json  test_aggregator_toggle_rejects_missing_field.json  test_aggregator_toggle_rejects_non_boolean.json  test_finalized_state_4v.json  test_fork_choice_4v.json  test_fork_choice_8v.json  test_health.json  test_justified_checkpoint_4v.json  test_justified_checkpoint_8v.json
lean_client/test_vectors/api_endpoint/devnet/api/test_api_post_genesis/: test_finalized_state_at_slot_3.json  test_fork_choice_tree_at_slot_3.json  test_justified_checkpoint_at_slot_3.json
lean_client/test_vectors/api_endpoint/devnet/api/test_metrics_endpoint/: test_metrics_endpoint_scrape_contract.json
lean_client/test_vectors/api_endpoint/lstar/api/test_api_endpoints/: test_aggregator_status_disabled.json  test_aggregator_status_enabled.json  test_aggregator_toggle_activate.json  test_aggregator_toggle_deactivate.json  test_aggregator_toggle_idempotent_disable.json  test_aggregator_toggle_idempotent_enable.json  test_finalized_state_4v.json  test_fork_choice_4v.json  test_fork_choice_8v.json  test_health.json  test_justified_checkpoint_4v.json  test_justified_checkpoint_8v.json
lean_client/test_vectors/api_endpoint/lstar/api/test_api_post_genesis/: test_finalized_state_at_slot_3.json  test_fork_choice_tree_at_slot_3.json  test_justified_checkpoint_at_slot_3.json
lean_client/test_vectors/api_endpoint/lstar/api/test_metrics_endpoint/: test_metrics_endpoint_scrape_contract.json
lean_client/test_vectors/discovery_crypto/devnet/networking/test_discovery_crypto/: test_aes_gcm_encrypt_empty_plaintext.json  test_aes_gcm_encrypt_spec_ping.json  test_aes_gcm_encrypt_with_aad.json  test_ecdh_ephemeral_to_b.json  test_ecdh_node_a_to_b.json  test_ecdh_node_b_to_a.json  test_id_nonce_sign_spec_vector.json  test_id_nonce_verify_valid.json  test_id_nonce_verify_wrong_challenge.json  test_id_nonce_verify_wrong_pubkey.json  test_key_derivation_spec_vector.json  test_node_id_from_node_a.json  test_node_id_from_node_b.json
lean_client/test_vectors/discovery_crypto/lstar/networking/test_discovery_crypto/: test_aes_gcm_encrypt_empty_plaintext.json  test_aes_gcm_encrypt_spec_ping.json  test_aes_gcm_encrypt_with_aad.json  test_ecdh_ephemeral_to_b.json  test_ecdh_node_a_to_b.json  test_ecdh_node_b_to_a.json  test_id_nonce_sign_spec_vector.json  test_id_nonce_verify_valid.json  test_id_nonce_verify_wrong_challenge.json  test_id_nonce_verify_wrong_pubkey.json  test_key_derivation_spec_vector.json  test_node_id_from_node_a.json  test_node_id_from_node_b.json
lean_client/test_vectors/fork_choice/devnet/fc/test_attestation_source_divergence/: test_justified_divergence_self_heals_in_next_block.json
lean_client/test_vectors/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_walkback_bounded_by_lookback.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
lean_client/test_vectors/fork_choice/devnet/fc/test_block_attestation_limits/: test_block_exceeding_maximum_attestations_is_rejected.json  test_block_with_maximum_attestations.json
lean_client/test_vectors/fork_choice/devnet/fc/test_block_production/: test_block_builder_fixed_point_advances_justification.json  test_produce_block_includes_pending_attestations.json
lean_client/test_vectors/state_transition/lstar/test_capability_gating/: test_runs_when_fork_advertises_sigscheme.json
lean_client/validator/: Cargo.toml
lean_client/validator/src/: keys.rs  lib.rs
lean_client/validator/tests/: unit_tests.rs
lean_client/xmss/: Cargo.toml
lean_client/xmss/src/: aggregated_signature.rs  lib.rs  multi_message.rs  public_key.rs  secret_key.rs  signature.rs
lean_client/xmss/tests/: aggregate.rs
(+1049 files in other folders)
