[package]
name = "containers"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
bls = { workspace = true }
env-config = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
ssz = { workspace = true }
tracing = { workspace = true }
try_from_iterator = { workspace = true }
typenum = { workspace = true }
xmss = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
test-generator = { workspace = true }
