[package]
name = "fork_choice"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bls = { workspace = true }
containers = { workspace = true }
env-config = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
ssz = { workspace = true }
tracing = { workspace = true }
xmss = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spec_test_fixtures = { workspace = true }
test-generator = { workspace = true }
