[package]
name = 'http_api'
version = '0.1.0'
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
fork_choice = { workspace = true }
validator = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssz = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
fork_choice = { workspace = true }
http-body-util = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-generator = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
