[package]
name = 'metrics'
version = '0.1.0'
edition = { workspace = true }

[dependencies]
axum = { workspace = true, features = ['macros'] }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
http_api_utils = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
