[package]
name = "networking"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
containers = { workspace = true }
derive_more = { workspace = true }
discv5 = { workspace = true }
enr = { workspace = true }
env-config = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-mplex = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
snap = { workspace = true }
ssz = { workspace = true }
tiny-keccak = { workspace = true }
typenum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
yamux = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
