[package]
name = "validator"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
containers = { workspace = true }
env-config = { workspace = true }
ethereum-types = { workspace = true }
fork_choice = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
ssz = { workspace = true }
tracing = { workspace = true }
try_from_iterator = { workspace = true }
typenum = { workspace = true }
xmss = { workspace = true }
zeroize = { workspace = true }
